fix - vertical blog post image stretching on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -511,9 +511,6 @@ h2 {
 .flex {
   display: flex;
 }
-.h-full {
-  height: 100%;
-}
 .min-h-\[450px\] {
   min-height: 450px;
 }
@@ -592,10 +589,6 @@ h2 {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.object-cover {
-  -o-object-fit: cover;
-  object-fit: cover;
 }
 .p-2 {
   padding: 0.5rem;
